completed another set of remaining questions

--- a/Indexes/Sheet-Questions/12.Inheritance&Prototypes.html
+++ b/Indexes/Sheet-Questions/12.Inheritance&Prototypes.html
@@ -107,7 +107,13 @@ Array.addAll(arr);</code></pre>
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Output:-</div>
-						<pre><code>Undefined</code></pre>
+						<pre><code>var student = {
+    name : "Stu1",
+    course : "Full-stack",
+    rollNo : 49,
+}
+result = Object.keys(student)
+console.log(result);</code></pre>
 					</div>
 				</details>
 			</section>
