--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
 							Promises & <br />
 							Async Await.
 						</a>
-						<!-- <a id="contentBox14" class="contentBox" href="./Indexes/6.Problem-Solving.html">Problem Solving.</a>
-						<a id="contentBox15" class="contentBox" href="./Indexes/7.Objects.html">Objects.</a>
-						<a id="contentBox16" class="contentBox" href="./Indexes/8.Assignment.html">Assignments.</a> -->
+						<a id="contentBox15" class="contentBox" href="./Indexes/Sheet-Questions/14.Closures.html">Closures.</a>
+						<a id="contentBox14" class="contentBox" href="./Indexes/Sheet-Questions/15.Maps&Sets.html">Maps & Sets.</a>
 					</div>
 				</div>
 			</div>
