--- a/Indexes/Sheet-Questions/15.Maps&Sets.html
+++ b/Indexes/Sheet-Questions/15.Maps&Sets.html
@@ -58,7 +58,7 @@ setFn('abcadeecfb');</code></pre>
 						<div class="div-flex-child1">Code:-</div>
 						<pre><code>let s="abcadeecfb"
 let map = new Map()
-for(let i=0;i < s.length;i++){
+for(let i=0;i &lt; s.length;i++){
     if(map.has(s[i])){
         let value = map.get(s[i])
         map.set(s[i], value+1)
