--- a/Indexes/Sheet-Questions/9.Array-Of-Objects.html
+++ b/Indexes/Sheet-Questions/9.Array-Of-Objects.html
@@ -22,11 +22,16 @@
 		</style>
 	</head>
 	<body>
-		<div id="total-questions">Total Number of Questions: 8</div>
-		<main>
+		<div class="header-flex">
+			<div class="home-btn">
+				<a href="../../index.html"><button id="button-home">Home</button></a>
+			</div>
 			<header class="headings">
-				<h1 id="h1-heading1">JS-Array of Objects Questions.</h1>
+				<h1 id="h1-heading1">JS-Array of Objects.</h1>
 			</header>
+			<div id="total-questions">Total Number of Questions: 8</div>
+		</div>
+		<main>
 			<section id="sec1">
 				<div class="dataset">
 					<code class="code-var"> let studentRecords = [ {name: 'John', id: 123, marks : 98 }, {name: 'Baba', id: 101, marks : 23 }, {name: 'yaga', id: 200, marks : 45 }, <br /><span class="margin-span"></span>{name: 'Wick', id: 115, marks : 75 } ]; </code>
