--- a/Indexes/2.Decision-Making.html
+++ b/Indexes/2.Decision-Making.html
@@ -13,11 +13,16 @@
 		<title>JS Assessment-2</title>
 	</head>
 	<body>
-		<div id="total-questions">Total Number of Questions: 9</div>
-		<main>
+		<div class="header-flex">
+			<div class="home-btn">
+				<a href="../../index.html"><button id="button-home">Home</button></a>
+			</div>
 			<header class="headings">
-				<h1 id="h1-heading1">JS Decision Making.</h1>
+				<h1 id="h1-heading1">JS-Decision Making.</h1>
 			</header>
+			<div id="total-questions">Total Number of Questions: 9</div>
+		</div>
+		<main>
 			<section id="sec1">
 				<details id="ans1" class="answers">
 					<summary id="que1" class="questions">
