--- a/Indexes/4.Arrays.html
+++ b/Indexes/4.Arrays.html
@@ -13,11 +13,16 @@
         <title>JS Assessment-4</title>
     </head>
     <body>
-        <div id="total-questions">Total Number of Questions: 11</div>
+        <div class="header-flex">
+			<div class="home-btn">
+				<a href="../../index.html"><button id="button-home">Home</button></a>
+			</div>
+			<header class="headings">
+				<h1 id="h1-heading1">JS-Arrays.</h1>
+			</header>
+			<div id="total-questions">Total Number of Questions: 11</div>
+		</div>
         <main>
-            <header class="headings">
-                <h1 id="h1-heading1">JS Arrays.</h1>
-            </header>
             <section id="sec1">
                 <details id="ans1" class="answers">
                     <summary id="que1" class="questions">
