--- a/Indexes/Sheet-Questions/10.DOM.html
+++ b/Indexes/Sheet-Questions/10.DOM.html
@@ -52,11 +52,16 @@
 		</style>
 	</head>
 	<body>
-		<div id="total-questions">Total Number of Questions: 10</div>
-		<main>
+		<div class="header-flex">
+			<div class="home-btn">
+				<a href="../../index.html"><button id="button-home">Home</button></a>
+			</div>
 			<header class="headings">
-				<h1 id="h1-heading1">JS-DOM Questions.</h1>
+				<h1 id="h1-heading1">JS-DOM.</h1>
 			</header>
+			<div id="total-questions">Total Number of Questions: 10</div>
+		</div>
+		<main>
 			<section id="sec1">
 				<details id="ans1" class="answers">
 					<summary id="que1" class="questions">
