--- a/Indexes/Sheet-Questions/11.Functions.html
+++ b/Indexes/Sheet-Questions/11.Functions.html
@@ -19,11 +19,16 @@
 		<title>JS-Functions Questions</title>
 	</head>
 	<body>
-		<div id="total-questions">Total Number of Questions: 7</div>
-		<main>
+		<div class="header-flex">
+			<div class="home-btn">
+				<a href="../../index.html"><button id="button-home">Home</button></a>
+			</div>
 			<header class="headings">
-				<h1 id="h1-heading1">JS-Functions Questions.</h1>
+				<h1 id="h1-heading1">JS-Functions.</h1>
 			</header>
+			<div id="total-questions">Total Number of Questions: 7</div>
+		</div>
+		<main>
 			<section id="sec1">
 				<details id="ans1" class="answers">
 					<summary id="que1" class="questions">
