--- a/Indexes/Sheet-Questions/12.Inheritance&Prototypes.html
+++ b/Indexes/Sheet-Questions/12.Inheritance&Prototypes.html
@@ -22,11 +22,16 @@
 		<title>JS-I&PQuestions</title>
 	</head>
 	<body>
-		<div id="total-questions">Total Number of Questions: 4</div>
-		<main>
+		<div class="header-flex">
+			<div class="home-btn">
+				<a href="../../index.html"><button id="button-home">Home</button></a>
+			</div>
 			<header class="headings">
-				<h1 id="h1-heading1">JS-Inheritance & Prototypes Questions.</h1>
+				<h1 id="h1-heading1">JS-Inheritance & Prototypes.</h1>
 			</header>
+			<div id="total-questions">Total Number of Questions: 4</div>
+		</div>
+		<main>
 			<section id="sec1">
 				<details id="ans1" class="answers">
 					<summary id="que1" class="questions">
