--- a/Indexes/Sheet-Questions/14.Closures.html
+++ b/Indexes/Sheet-Questions/14.Closures.html
@@ -56,7 +56,7 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Code:-</div>
-						<pre><code></code></pre>
+						<pre>Alert with values 1,2,3,4.</pre>
 					</div>
 				</details>
 				<hr />
@@ -78,7 +78,7 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Code:-</div>
-						<pre><code></code></pre>
+						<pre>1</pre>
 					</div>
 				</details>
 				<hr />
@@ -97,7 +97,7 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Code:-</div>
-						<pre><code></code></pre>
+						<pre>3 gets logged 3 times with 1 sec difference between each log.</pre>
 					</div>
 				</details>
 				<hr />
@@ -119,7 +119,16 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Code:-</div>
-						<pre><code></code></pre>
+						<pre><code>function counter()
+var counter = 0;
+function IncreaseCounter(){
+    return counter +=1;
+}
+return IncreaseCounter;
+}
+var counter = counter();
+alert (counter())
+alert (counter())</code></pre>
 					</div>
 				</details>
 				<hr />
@@ -137,7 +146,7 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Output:-</div>
-						<pre><code></code></pre>
+						<pre>Alert with value as 12.</pre>
 					</div>
 				</details>
 				<hr />
@@ -159,7 +168,7 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Code:-</div>
-						<pre><code></code></pre>
+						<pre>Alert with value as 12.</pre>
 					</div>
 				</details>
 				<hr />
@@ -186,7 +195,13 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Code:-</div>
-						<pre><code></code></pre>
+						<pre>
+outerArg = 123
+innerArg = 456
+outerVar = a
+innerVar = b
+globalVar = xyz</pre
+						>
 					</div>
 				</details>
 			</section>
