Half-ass Cp=ompetion

--- a/Indexes/8.Assignment.html
+++ b/Indexes/8.Assignment.html
@@ -56,7 +56,15 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Ans:-</div>
-						<pre><code></code></pre>
+						<pre><code>const squareFit = (m,n) => {
+    if((m%2 === 0)||(n%2 === 0)){
+        var a = (m*n)/2;
+    }  
+    else{
+        a= ((m*n)-1)/2;
+    }
+    return a
+};</code></pre>
 					</div>
 				</details>
 				<hr />
@@ -67,7 +75,10 @@
 					</summary>
 					<div class="details-flex">
 						<div class="div-flex-child1">Ans:-</div>
-						<pre><code></code></pre>
+						<pre><code>const ageCalculation = (f,s) => {
+    let x = f - 2*s;
+    return (Math.abs(x));
+};</code></pre>
 					</div>
 				</details>
 				<hr />
